add new features

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "@vinejs/vine": "^3.0.1",
     "luxon": "^3.6.1",
     "pg": "^8.16.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "zod": "^3.25.61"
   },
   "hotHook": {
     "boundaries": [
